# ppmm

./: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  install.sh  quick-install.sh
.github/workflows/: publish.yml  release-checklist.yml
src/: main.rs  project_managers.rs
